--- a/rps_game/game/templates/main.html
+++ b/rps_game/game/templates/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>rock paper scissors</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
     <h2>Rock Paper Scissors game!</h2>
