--- a/rps_game/game/templates/round_view.html
+++ b/rps_game/game/templates/round_view.html
@@ -1,6 +1,7 @@
 {% extends "main.html" %}
 
 {% block content %}
+{% load static %}
 <form action="" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
@@ -8,4 +9,5 @@
     <input type="submit" name="paper" value="paper">
     <input type="submit" name="scissors" value="scissors">
 </form>
+<script type="text/javascript" src="{% static 'js/refresh.js' %}"></script>
 {% endblock %}
