--- a/rps_game/game/templates/login.html
+++ b/rps_game/game/templates/login.html
@@ -6,4 +6,6 @@
     {{ form.as_p }}
     <input type="submit" value="login">
 </form>
+<br>
+<a href="{% url 'register' %}"><input type="button" value="register"></a>
 {% endblock %}
