--- a/rps_game/game/templates/create.html
+++ b/rps_game/game/templates/create.html
@@ -4,6 +4,6 @@
 <form action="" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="create game as {{ user.username }}">
+    <input type="submit" value="create game as {{ user.username }}" class="btn btn-sm btn-primary">
 </form>
 {% endblock %}
