--- a/rps_game/game/templates/login.html
+++ b/rps_game/game/templates/login.html
@@ -5,8 +5,6 @@
 <form action="" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="login">
+    <input type="submit" value="login" class="btn btn-primary">
 </form>
-<br>
-<a href="{% url 'register' %}"><input type="button" value="register"></a>
 {% endblock %}
