--- a/rps_game/game/templates/main.html
+++ b/rps_game/game/templates/main.html
@@ -12,17 +12,27 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3">
+        <a href="/" class="navbar-brand">Rock Paper Scissors</a>
+    <div class="col mr-auto">
+        <a href="{% url 'logout' %}"><button class="btn btn-outline-success" type="submit">Logout</button></a>
+        <a href="{% url 'lobby' %}" class="btn btn-outline-success">Lobby</a>
+    </div>
+
+</nav>
 <div class="container">
-    <h2>Rock Paper Scissors game!</h2>
+    <div class="jumbotron mt-3">
     {% block content %}
+        <h4>Welcome to multiplayer game of rock paper scissors, please proceed in order to play:</h4>
     {% if user.is_authenticated %}
     <h3>Hello {{ user.username }}</h3>
     <a href="{% url 'lobby' %}"><input type="button"value="go to lobby"></a>
     {% else %}
-    <a href="{% url 'register' %}"><button type="button" class="btn btn-primary">register account</button></a><br>
-    <a href="{% url 'login' %}"><button type="button" class="btn btn-primary">log in</button></a>
+    <a href="{% url 'register' %}"><button type="button" class="btn btn-sm btn-primary">create account</button></a><br><br>
+    <a href="{% url 'login' %}"><button type="button" class="btn btn-sm btn-primary">log in</button></a>
     {% endif %}
     {% endblock %}
+    </div>
 </div>
 
 </body>
