--- a/rps_game/game/templates/register.html
+++ b/rps_game/game/templates/register.html
@@ -4,6 +4,6 @@
 <form action="" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="create account">
+    <input type="submit" value="create account" class="btn btn-primary">
 </form>
 {% endblock %}
