--- a/rps_game/game/templates/main.html
+++ b/rps_game/game/templates/main.html
@@ -15,21 +15,23 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3">
         <a href="/" class="navbar-brand">Rock Paper Scissors</a>
     <div class="col mr-auto">
-        <a href="{% url 'logout' %}"><button class="btn btn-outline-success" type="submit">Logout</button></a>
-        <a href="{% url 'lobby' %}" class="btn btn-outline-success">Lobby</a>
+        {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}"><button class="btn btn-outline-secondary" type="submit">Logout</button></a>
+        {% else %}
+        <a href="{% url 'login' %}" class="btn btn-outline-info">Login</a>
+        <a href="{% url 'register' %}" class="btn btn-outline-info">Register</a>
+        {% endif %}
     </div>
 
 </nav>
 <div class="container">
     <div class="jumbotron mt-3">
     {% block content %}
-        <h4>Welcome to multiplayer game of rock paper scissors, please proceed in order to play:</h4>
+        <h4>Welcome to the multiplayer game of rock paper scissors</h4>
+        <p><a href="{% url 'login' %}">login</a> to play with other people, feel free to invite your friend for a quick 1vs1 match</p>
     {% if user.is_authenticated %}
     <h3>Hello {{ user.username }}</h3>
     <a href="{% url 'lobby' %}"><input type="button"value="go to lobby"></a>
-    {% else %}
-    <a href="{% url 'register' %}"><button type="button" class="btn btn-sm btn-primary">create account</button></a><br><br>
-    <a href="{% url 'login' %}"><button type="button" class="btn btn-sm btn-primary">log in</button></a>
     {% endif %}
     {% endblock %}
     </div>
