--- a/rps_game/game/templates/main.html
+++ b/rps_game/game/templates/main.html
@@ -16,10 +16,12 @@
         <a href="/" class="navbar-brand">Rock Paper Scissors</a>
     <div class="col mr-auto">
         {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}"><button class="btn btn-outline-secondary" type="submit">Logout</button></a>
+        <a href="{% url 'logout' %}" class="float-sm-right"><button class="btn btn-outline-secondary" type="submit">Logout</button></a>
         {% else %}
+        <div class="float-sm-right">
         <a href="{% url 'login' %}" class="btn btn-outline-info">Login</a>
         <a href="{% url 'register' %}" class="btn btn-outline-info">Register</a>
+        </div>
         {% endif %}
     </div>
 
@@ -31,7 +33,7 @@
         <p><a href="{% url 'login' %}">login</a> to play with other people, feel free to invite your friend for a quick 1vs1 match</p>
     {% if user.is_authenticated %}
     <h3>Hello {{ user.username }}</h3>
-    <a href="{% url 'lobby' %}"><input type="button"value="go to lobby"></a>
+    <a href="{% url 'lobby' %}"><input type="button"value="go to lobby" class="btn btn-info"></a>
     {% endif %}
     {% endblock %}
     </div>
