--- a/rps_game/game/templates/results_opp.html
+++ b/rps_game/game/templates/results_opp.html
@@ -11,5 +11,5 @@
     <p>u bad ;(</p>
     <p>score: {{ opres }}:{{ cres }}</p>
     {% endif %}
-<a href="/lobby"><input type="button" value="Lobby"></a>
+<a href="/lobby"><input type="button" value="Lobby" class="btn btn-info"></a>
 {% endblock %}
